--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - working-directory: dockers/openvpn-client
     - uses: actions/checkout@v2
     - name: Docker Action
       # You may pin to the exact commit or the version.
